add spectum api
